# Aegisub

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: appimage.yml  archlinux.yml  ci.yml  distro.yml  linux-sanitizer.yml  linux.yml  macos.yml  suse.yml  windows.yml
automation/include/: meson.build
automation/include/aegisub/: meson.build
automation/vapoursynth/: meson.build
libaegisub/: meson.build
libaegisub/ass/: time.cpp
libaegisub/audio/: provider.cpp
libaegisub/common/: charset_conv.cpp  dispatch.cpp  io.cpp  log.cpp  parser.cpp  thesaurus.cpp
libaegisub/include/libaegisub/: fs.h  line_iterator.h  type_name.h  util.h
libaegisub/unix/: util.cpp
po/: aegisub.pot  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fa.po  fi.po  fr_FR.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sr_RS.po  sr_RS@latin.po  uk_UA.po  vi.po  zh_CN.po  zh_TW.po
src/: MatroskaParser.c  MatroskaParser.h  aegisublocale.cpp  ass_dialogue.cpp  ass_file.cpp  ass_override.cpp  ass_style.cpp  async_video_provider.cpp  audio_box.cpp  audio_display.cpp  audio_karaoke.cpp  audio_player_dsound2.cpp  audio_player_openal.cpp  audio_provider_avs.cpp  audio_renderer_spectrum.cpp  audio_timing_dialogue.cpp  audio_timing_karaoke.cpp  auto4_base.cpp  auto4_lua.cpp  auto4_lua_assfile.cpp  auto4_lua_dialog.cpp  base_grid.cpp  bestsource_common.h  colorspace.cpp  colour_button.cpp  dialog_about.cpp  dialog_attachments.cpp  dialog_automation.cpp  dialog_colorpicker.cpp  dialog_dummy_video.cpp  dialog_export.cpp  dialog_fonts_collector.cpp  dialog_jumpto.cpp  dialog_kara_timing_copy.cpp  dialog_progress.cpp  dialog_properties.cpp  dialog_resample.cpp  dialog_search_replace.h  dialog_spellchecker.cpp  dialog_style_editor.cpp  (+38 more)
src/command/: edit.cpp  help.cpp
src/include/: agi_pre_c.h
src/libresrc/: default_config.json  libresrc.cpp  meson.build
src/libresrc/osx/: default_config.json
subprojects/: avisynth.wrap  bestsource.wrap  boost.wrap  ffms2.wrap  freetype2.wrap  fribidi.wrap  gtest.wrap  harfbuzz.wrap  hunspell.wrap  libass.wrap  nasm.wrap  vapoursynth.wrap  wxWidgets.wrap
subprojects/csri/: meson.build
subprojects/iconv/: meson.build
subprojects/packagefiles/boost/: meson.build
subprojects/packagefiles/ffmpeg/: 0001.patch
subprojects/packagefiles/ffms2/: meson.build
subprojects/packagefiles/hunspell/: meson.build
subprojects/packagefiles/icu/: meson.build
subprojects/packagefiles/luajit/: meson.build
subprojects/packagefiles/luajit/src/host/: meson.build
subprojects/packagefiles/nasm/: meson.build
tests/: meson.build
tests/tests/: audio.cpp  cajun.cpp  fs.cpp
tools/: repack-thes-dict.cpp  version.ps1
(+7 files in other folders)
